@@ -1486,23 +1486,41 @@ You can enter GAIT LIST to get a list of valid gaits.
 GROUP=\
 Command : GROUP\n\r\
 Usage   : GROUP\n\r\
+Usage   : GROUP LEADER [NEW LEADERS NAME]\n\r\
 Example : group\n\r\
+Example : group leader bob\n\r\
 Short(s): \n\r\
-Lists the members of any group to which you may belong.  See \
-the FOLLOW, NOFOLLOW, ORDER, GTELL and FORMATION commands for \
+Lists the members of any group to which you may belong.\n\r\
+\n\r\
+If you are the leader of a group or sub-group, and use the \
+LEADER keyword, you can change the groups immediate leader. This \
+may have strange effects on summoned followers.\n\r\
+\n\r\
+See the FOLLOW, NOFOLLOW, ORDER, GTELL FTELL, and FORMATION commands for \
 more information on groups.  See also the help on UNDRESS, AUTOMELEE, \
 RANGE, and FEED.
 
 GTELL=\
 Command : GTELL\n\r\
-Usage   : GTELL\n\r\
+Usage   : GTELL [MESSAGE]\n\r\
 Example : gtell So when do we kill this thing?\n\r\
 Example : gtell last 10\n\r\
 Short(s): \n\r\
 Sends a private message to the members of your characters group. \
 If the first parameter is "last" and a number X follows, this command \
 will show you the last X group tells. \
-See also GROUP, FOLLOW, NOFOLLOW, ORDER, and FORMATION.
+See also GROUP, FOLLOW, NOFOLLOW, ORDER, FTELL, and FORMATION.
+
+FTELL=\
+Command : FTELL\n\r\
+Usage   : FTELL [MESSAGE]\n\r\
+Example : ftell So when do we kill this thing?\n\r\
+Example : ftell last 10\n\r\
+Short(s): \n\r\
+Sends a private message to your characters followers. \
+If the first parameter is "last" and a number X follows, this command \
+will show you the last X group tells. \
+See also GROUP, FOLLOW, NOFOLLOW, ORDER, GTELL, and FORMATION.
 
 HELP=\
 Command : HELP\n\r\
