@@ -70,6 +70,8 @@
  68. New shopkeeper type: children seller (for an orphanage).
  69. New RP/MUSH-like command 'DIEROLL'.
  70. User selection masking now supports "LAST.", like GET LAST.SWORD
+ 71. FTELL will now invoke GTELL, but only for your followers.
+ 72. GROUP now supports LEADER keyword to change your group leader.
  
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
